--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body{
 }
 .one{
 	float: left;
-	margin: 100px 20px;
+	margin: 0 20px;
 	color: rgb(0,153,204);
 }
 .box {
@@ -46,5 +46,9 @@ body{
 }
 .pass{
 	width: 120px;
-	margin: 4px 40px;
+	margin: 1px 40px;
+	height: 10px;
+}
+.font{
+	font-size: 5px;
 }
